fix selected text background to transparent so accidentally selecting is not visible to player

--- a/src/containers/styles/board-square.scss
+++ b/src/containers/styles/board-square.scss
@@ -18,4 +18,8 @@
   &.flag {
     background: radial-gradient(pink, white);
   }
+
+  &::selection {
+    background: none;
+  }
 }
